Fix Sidebar scrollbar functionality. - Change scroll style for auto. - Adjust bars heights. - Adjust bars styles between transitions. - Switch px values to rem on calcs.

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -3,7 +3,7 @@
   background-color: $primary-color;
   color: $white;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 0;
 
   ul {
@@ -159,13 +159,18 @@
   .toolbar {
     @include transition(top .5s ease-in-out);
     background-color: $primary-color;
-    height: 100%;
+    height: calc(100% - 4.125rem);
     left: 0;
+    min-height: rem-calc(450);
     position: absolute;
     top: rem-calc(66);
     width: 100%;
 
-    &.active { top: 100%; }
+    &.active {
+      position: fixed;
+      top: 100%;
+      width: inherit;
+    }
   }
 
   #extras,
@@ -308,4 +313,5 @@
 
   &.full { width: calc(100% - 4.0625rem); }
 }
+
 
